- Fixed the language plugin crashing the mod on opening the settings