@@ -10,5 +10,5 @@
   "steamContentId" : "3445409664",
   "steamDescription" : "[h1]StarCustomChat: Roleplay[/h1]\n\nThis plugin for [url=https://github.com/KrashV/StarCustomChat]StarCustomChat[/url] is dedicated to the roleplay aspects of the game. It consists of the following modules:\n\n[h1]Edit message[/h1]\nYou can edit the message using the context menu. The changes will only be seen for the players on the same players as you.\n\n> [!NOTE]\n> Without a server-specific patch to specify the stagehand that correctly handles the editing message, the edit will be only seen for the players around you.\n\n[h1]Proximity chat[/h1]\nYou can specify the stagehand that would receive the message and then resend it to people around, or you can skip the stagehand and send the message around your character. \n[img]https://i.imgur.com/fbnNKF0.png][/img]\n*Obviously, only people with the mod installed will receive this message*\n\n[h1]OOC chat[/h1]\nA simple tab that automatically adds double brackets around your message (( )). Also places the OOC messages in a separate channel which you can turn off.\n[img]https://i.imgur.com/AeTFO7a.png][/img]\n\n[h1]RP Chat[/h1]\n\nThis plugin brings an ability to color the \\[i]Actions[/i] and %Thoughts% within messsages into custom, user-specific colors.\n\n[img]https://i.imgur.com/ZXh5DKo.png][/img]\n\nAlso, people with the Admin permissions can fire an Announcement message in your face, that will ignore all your filters and will have the scary red color.\n\n[img]https://i.imgur.com/PLWKb4a.png][/img]\n*Now you can truly make an announcement about what exactly Shadow the Hedgehog did to your wife*\n\n[h1]RP Languages[/h1]\n\n> This requires Starbound server administrators to set up the language support on their side\n\n> People without the mod will see the normal message - with some extra spaces in it - when you use this functionality.\n\nYou can specify the language your character will be speaking in \"Quotation marks\", so that the characters who don't know this language might find it hard to read.\n\n[img]https://i.imgur.com/FxM7l4p.png][/img]\n",
   "tags" : "User Interface",
-  "version" : "1.9.4.1"
+  "version" : "1.10.0"
 }
