@@ -1,5 +1,7 @@
 {
     "chat.modes.Announcement": "Важное",
     "settings.colors.actionstext": "*Действия*",
-    "settings.colors.thoughtstext": "%Мысли%"
+    "settings.colors.thoughtstext": "%Мысли%",
+    "settings.fonts.actionstext": "*Действия*",
+    "settings.fonts.thoughtstext": "%Мысли%"
 }
